--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,4 @@
 # See hack/generate-authors.sh to make modifications.
 
 Darin Gamaleldin <daringamaleldin@hotmail.com>
+Romisaa Hamdy <romisaa.hamdy@yahoo.com>
